<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Register"
    android:padding="15dp"
    android:background="@drawable/welcome_ready">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/create_new_account"
        android:textColor="#F5F5F5"
        android:textSize="25sp"
        android:textStyle="normal" />
    <!-- Nhập liệu email -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email_required"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>
    <!-- Nhập liệu password -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password_required"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Nhập liệu tên -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:hint="@string/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>
    <!-- Nhập liệu tuổi -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dob"
            android:hint="@string/date_of_birth_dd_mm_yyyy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>
    <!-- Nhập liệu số điện thoại -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:hint="@string/phone_84"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="12dp"
        android:text="@string/register"
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textStyle="normal"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/loginNow"
        android:text="@string/login_to_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FAFAFA" />

</LinearLayout>
